--- a/Exercises/Exercise02/C/Makefile
+++ b/Exercises/Exercise02/C/Makefile
@@ -1,6 +1,6 @@
 
-ifndef CC
-	CC = gcc
+ifndef CCG
+	CCG=gcc
 endif
 
 CCFLAGS=-O3 -lm
@@ -26,7 +26,7 @@ endif
 CCFLAGS += -D DEVICE=$(DEVICE)
 
 vadd: vadd_c.c $(COMMON_DIR)/wtime.c $(COMMON_DIR)/device_info.c
-	$(CC) $^ $(CCFLAGS) $(LIBS) -I $(COMMON_DIR) -o $@
+	$(CCG) $^ $(CCFLAGS) $(LIBS) -I $(COMMON_DIR) -o $@
 
 
 clean:
